--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Multi Color HTML Template</title>
+    <title>간장계란밥</title>
     <!--
 
 Template 2086 Multi Color
@@ -28,6 +28,7 @@ http://www.tooplate.com/view/2086-multi-color
     <link rel="stylesheet" href="css/magnific-popup.css" />
     <!-- Magnific popup style (http://dimsemenov.com/plugins/magnific-popup/) -->
     <link rel="stylesheet" href="css/tooplate-style.css" />
+    <link href="./css/animate.css" rel="stylesheet" type="text/css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -73,9 +74,7 @@ http://www.tooplate.com/view/2086-multi-color
                   <a class="nav-link" href="#0" data-no="3">Publishing</a>
                 </li>
                 <li class="nav-item"></li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#0" data-no="5">Keep in touch</a>
-                </li>
+                <li class="nav-item"></li>
               </ul>
             </div>
           </div>
@@ -94,6 +93,7 @@ http://www.tooplate.com/view/2086-multi-color
                   <div class="tm-flex">
                     <div
                       class="tm-bg-white-translucent text-xs-left tm-textbox tm-textbox-padding"
+                      id="contac"
                     >
                       <h2 class="tm-text-title">About me</h2>
                       <p class="tm-text">
@@ -108,54 +108,12 @@ http://www.tooplate.com/view/2086-multi-color
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;구내통신
                         - 통신망 구축 및 개통/관리<br />
                       </p>
+                      <img src="./img/face.jpg" alt="face" class="face" />
                     </div>
                   </div>
                 </div>
               </div>
-
               <div class="row tm-white-box-margin-b">
-                <div class="col-xs-12">
-                  <div class="tm-flex">
-                    <div
-                      class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding"
-                    >
-                      <h2 class="tm-text-title">보유자격</h2>
-                      <p class="tm-text">
-                        2011. 7. 04 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;운전면허증
-                        1종보통<br />
-                        2014. 9. 26 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;인터넷 정보
-                        관리사 2급<br />
-                        2018. 9. 14 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GTQ
-                        그래픽기술자격 1급<br />
-                        2022. 5. 20 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;컴퓨터활용능력
-                        1급<br />
-                        2022. 6. 24 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;코딩지도사
-                        1급<br />
-                        2022. 9. 16 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GTQ일러스트
-                        1급
-                      </p>
-                    </div>
-                    <div
-                      class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding"
-                    >
-                      <h2 class="tm-text-title">Vivamus aliquam turpis</h2>
-                      <p class="tm-text">
-                        Photoshop 포토샵을 이용한 이미지 편집 및 디자인이
-                        가능합니다. Illustrator 일러스트레이터를 이용한 다양한
-                        디자인 작업과 마크업 구조를 구현할 수 있습니다. HTML
-                        html 웹 표준 . 웹 접근성을 준수하는 html 시멘틱 마크업을
-                        작성합니다. CSS CSS 속성을 이해하고 있으며 디자인 시안에
-                        따른 구현이 가능하고 미디어쿼리를 이용한 반응형 웹
-                        제작이 가능합니다. jQuery Java Script의 기본적인 문법을
-                        이해하고 있으며,다양한 메소드를 사용하여 기능을
-                        구현합니다. 다양한 플러그인 활용이 가능합니다.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
                 <div class="col-xs-12">
                   <div class="tm-flex">
                     <div
@@ -164,36 +122,106 @@ http://www.tooplate.com/view/2086-multi-color
                     >
                       <h2 class="tm-text-title">Skills</h2>
                       <p class="tm-text">
-                        <img src="./img/ps.png" alt="ps" />
+                        <img
+                          src="./img/ps.png"
+                          alt="ps"
+                          class="wow bounce"
+                          data-wow-iteration="999"
+                        />
                         Photoshop<br />
                         포토샵을 이용한 이미지 편집 및 디자인이 가능합니다.
                       </p>
                       <p class="tm-text">
-                        <img src="./img/ai.png" alt="ai" />
+                        <img
+                          src="./img/ai.png"
+                          alt="ai"
+                          class="wow bounce"
+                          data-wow-iteration="999"
+                          data-wow-delay=".05s"
+                        />
                         Illustrator<br />
                         일러스트레이터를 이용한 다양한 디자인 작업과 마크업
                         구조를 구현할 수 있습니다.
                       </p>
                       <p class="tm-text">
-                        <img src="./img/html.png" alt="html" />
+                        <img
+                          src="./img/html.png"
+                          alt="html"
+                          class="wow bounce"
+                          data-wow-iteration="999"
+                          data-wow-delay=".1s"
+                        />
                         HTML<br />
                         html 웹 표준 . 웹 접근성을 준수하는 html 시멘틱 마크업을
                         작성합니다.
                       </p>
                       <p class="tm-text">
-                        <img src="./img/css.png" alt="css" />
+                        <img
+                          src="./img/css.png"
+                          alt="css"
+                          class="wow bounce"
+                          data-wow-iteration="999"
+                          data-wow-delay=".15s"
+                        />
                         CSS<br />
                         CSS 속성을 이해하고 있으며 디자인 시안에 따른 구현이
                         가능하고 미디어쿼리를 이용한 반응형 웹 제작이
                         가능합니다.
                       </p>
                       <p class="tm-text">
-                        <img src="./img/js.png" alt="js" />
+                        <img
+                          src="./img/js.png"
+                          alt="js"
+                          class="wow bounce"
+                          data-wow-iteration="999"
+                          data-wow-delay=".2s"
+                        />
                         jQuery<br />
                         Java Script의 기본적인 문법을 이해하고 있으며,다양한
                         메소드를 사용하여 기능을 구현합니다. 다양한 플러그인
                         활용이 가능합니다.
                       </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="tm-flex">
+                    <div
+                      class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding"
+                    >
+                      <h2 class="tm-text-title">Certificate</h2>
+                      <p class="tm-text">
+                        2022. 9. 16 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GTQ일러스트
+                        1급 <br />
+                        2022. 6. 24 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;코딩지도사
+                        1급<br />
+                        2022. 5. 20 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;컴퓨터활용능력
+                        1급<br />
+                        2018. 9. 14 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;GTQ
+                        그래픽기술자격 1급<br />
+                        2014. 9. 26 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;인터넷 정보
+                        관리사 2급<br />
+                        2011. 7. 04 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;운전면허증
+                        1종보통
+                      </p>
+                    </div>
+                    <div
+                      class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding"
+                      id="contac"
+                    >
+                      <h2 class="tm-text-title">Contact</h2>
+                      <p class="tm-text">
+                        Mobile : 010-4956-3824 <br />
+                        E-mail : kimyw6@naver.com <br />
+                        Portfolio :
+                        <a href="https://enldk.github.io/portf"
+                          >enldk.github.io/portf</a
+                        >
+                        <br />
+                      </p>
+                      <img src="./img/kko_qr.jpg" alt="QRcode" />
                     </div>
                   </div>
                 </div>
@@ -1431,7 +1459,15 @@ http://www.tooplate.com/view/2086-multi-color
     <!-- Hero slider (https://codyhouse.co/gem/hero-slider/) -->
     <script src="js/jquery.magnific-popup.min.js"></script>
     <!-- Magnific popup (http://dimsemenov.com/plugins/magnific-popup/) -->
-
+    <script src="./js/wow.js"></script>
+    <script>
+      wow = new WOW({
+        animateClass: "animated",
+        offset: 100,
+        live: true,
+      });
+      wow.init();
+    </script>
     <script>
       function adjustHeightOfPage(pageNo) {
         var offset = 80;
