--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>간장계란밥</title>
+    <title>포트폴리오</title>
     <!--
 
 Template 2086 Multi Color
@@ -29,7 +29,7 @@ http://www.tooplate.com/view/2086-multi-color
     <!-- Magnific popup style (http://dimsemenov.com/plugins/magnific-popup/) -->
     <link rel="stylesheet" href="css/tooplate-style.css" />
     <link href="./css/animate.css" rel="stylesheet" type="text/css" />
-
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
