--- a/index.html
+++ b/index.html
@@ -726,6 +726,28 @@ http://www.tooplate.com/view/2086-multi-color
                   <div class="grid-item">
                     <figure class="effect-bubba">
                       <img
+                        src="img/tm-img2-99-tn.png"
+                        alt="Image"
+                        class="img-fluid tm-img"
+                      />
+                      <figcaption>
+                        <h2 class="tm-figure-title">팀프로젝트<br />활명수</h2>
+                        <p class="tm-figure-description">
+                          TOOLS : Photoshop, Illustrator, Figma, HTML5, CSS, JS
+                        </p>
+                        <button
+                          class="open_page"
+                          onclick="window.open('https://teamsclass7.github.io/class7/main.html')"
+                        >
+                          새창으로 열기
+                        </button>
+                        <a href="img/tm-img2-99.jpg">View more</a>
+                      </figcaption>
+                    </figure>
+                  </div>
+                  <div class="grid-item">
+                    <figure class="effect-bubba">
+                      <img
                         src="img/tm-img2-01-tn.jpg"
                         alt="Image"
                         class="img-fluid tm-img"
@@ -733,7 +755,7 @@ http://www.tooplate.com/view/2086-multi-color
                       <figcaption>
                         <h2 class="tm-figure-title">현대문학관</h2>
                         <p class="tm-figure-description">
-                          TOOLS : html5, CSS, JS
+                          TOOLS : HTML5, CSS, JS
                         </p>
                         <button
                           class="open_page"
@@ -776,7 +798,7 @@ http://www.tooplate.com/view/2086-multi-color
                       />
                       <figcaption>
                         <h2 class="tm-figure-title">Re:nk</h2>
-                        <p class="tm-figure-description">TOOLS : html5, CSS</p>
+                        <p class="tm-figure-description">TOOLS : HTML5, CSS</p>
                         <button
                           class="open_page"
                           onclick="window.open('완성/08re-nk/index.html')"
@@ -816,7 +838,7 @@ http://www.tooplate.com/view/2086-multi-color
                       />
                       <figcaption>
                         <h2 class="tm-figure-title">the Venti</h2>
-                        <p class="tm-figure-description">TOOLS : html5, CSS</p>
+                        <p class="tm-figure-description">TOOLS : HTML5, CSS</p>
                         <button
                           class="open_page"
                           onclick="window.open('완성/12theventi/index.html')"
@@ -1202,7 +1224,7 @@ http://www.tooplate.com/view/2086-multi-color
                         <h2 class="tm-figure-title">
                           Picture <span>One</span>
                         </h2>
-                        <p class="tm-figure-description">TOOLS : html5</p>
+                        <p class="tm-figure-description">TOOLS : HTML5</p>
                         <a href="img/tm-img-01.jpg">View more</a>
                       </figcaption>
                     </figure>
@@ -1236,7 +1258,7 @@ http://www.tooplate.com/view/2086-multi-color
                         <h2 class="tm-figure-title">
                           Picture <span>Three</span>
                         </h2>
-                        <p class="tm-figure-description">TOOLS : html5</p>
+                        <p class="tm-figure-description">TOOLS : HTML5</p>
                         <a href="img/tm-img-13.jpg">View more</a>
                       </figcaption>
                     </figure>
@@ -1270,7 +1292,7 @@ http://www.tooplate.com/view/2086-multi-color
                         <h2 class="tm-figure-title">
                           Picture <span>Five</span>
                         </h2>
-                        <p class="tm-figure-description">TOOLS : html5</p>
+                        <p class="tm-figure-description">TOOLS : HTML5</p>
                         <a href="img/tm-img-05.jpg">View more</a>
                       </figcaption>
                     </figure>
@@ -1304,7 +1326,7 @@ http://www.tooplate.com/view/2086-multi-color
                         <h2 class="tm-figure-title">
                           Picture <span>Seven</span>
                         </h2>
-                        <p class="tm-figure-description">TOOLS : html5</p>
+                        <p class="tm-figure-description">TOOLS : HTML5</p>
                         <a href="img/tm-img-11.jpg">View more</a>
                       </figcaption>
                     </figure>
