--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@ http://www.tooplate.com/view/2086-multi-color
                   <div class="grid-item">
                     <figure class="effect-bubba">
                       <img
-                        src="img/tm-img2-99-tn.png"
+                        src="img/tm-img2-99-tn.jpg"
                         alt="Image"
                         class="img-fluid tm-img"
                       />
@@ -1161,6 +1161,7 @@ http://www.tooplate.com/view/2086-multi-color
                       </figcaption>
                     </figure>
                   </div>
+                  <!--
                   <div class="grid-item">
                     <figure class="effect-bubba">
                       <img
@@ -1183,6 +1184,7 @@ http://www.tooplate.com/view/2086-multi-color
                       </figcaption>
                     </figure>
                   </div>
+                  -->
                 </div>
               </div>
             </div>
